infrastructure/secret-management/vault/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vault-gateway
  namespace: vault-infra
  annotations:
    cert-manager.io/cluster-issuer: "cert-manager-staging"
    cert-manager.io/common-name: "vault.decort.tech"
    cert-manager.io/usages: "digital signature,key encipherment,server auth,client auth"
    cert-manager.io/alt-names: "vault.vault-infra.svc.cluster.local,vault.vault-infra.svc,vault-infra,vault,*.vault-internal,*.vault-internal.vault-infra.svc.cluster.local,*.vault-internal.vault-infra.svc"
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: vault.decort.tech
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: vault.decort.tech
      port: 443
      protocol: HTTPS 
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate  
        certificateRefs:
          - name: vault-tls 
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route-redirect
  namespace: vault-infra
spec:
  parentRefs:
    - name: vault-gateway
      sectionName: http
  hostnames:
    - "vault.decort.tech"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault-infra
spec:
  parentRefs:
    - name: vault-gateway
      sectionName: https
  hostnames:
    - "vault.decort.tech"
  rules:
    - backendRefs:
        - name: vault-active
          port: 8200
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: "X-Forwarded-For"
                value: "${.source.address}"
              - name: "X-Real-IP"
                value: "${.source.address}"
              - name: "X-Forwarded-Proto"
                value: "https"
